# .ixx

./: .gitattributes  .gitignore  CHANGELOG.md  IXX_ROADMAP_0.6.6_to_0.7.md  OVERVIEW.md  README.md  _commit_msg.txt  debug_temp.ps1  debug_temp2.ps1  debug_temp3.ps1  debug_temp4.ps1  debug_temp5.ps1  debug_temp6.ps1  debug_temp7.ps1  ixx-hello.txt  ixx-lines.txt  pyproject.toml  smoke_builtins.py
StressTest/: 01-basics.ixx  02-functions.ixx  03-builtins-text.ixx  04-builtins-math.ixx  05-builtins-lists.ixx  06-files.ixx  07-try-catch.ixx  08-scope.ixx  09-color.ixx  10-interpolation-display.ixx  11-operator-edgecases.ixx  12-truthiness.ixx  13-keyword-identifiers.ixx  14-nested-blocks.ixx  15-try-catch-edgecases.ixx  16-file-io-edgecases.ixx  17-builtins-error-handling.ixx  18-function-edgecases.ixx  19-scope-edgecases.ixx  20-list-text-roundtrip.ixx  21-color-display-matrix.ixx  22-comments-and-format.ixx  23-forward-recursive-mix.ixx  24-statement-expression-calls.ixx  25-readlines-processing.ixx  26-silent-try-recovery.ixx  27-comparison-matrix.ixx  28-loop-mutation.ixx  29-type-display-matrix.ixx  30-realistic-mini-app.ixx  31-do-basic.ixx  32-do-aliases.ixx  33-do-try-catch.ixx  34-do-file-report.ixx  35-do-output-processing.ixx  36-do-command-matrix.ixx  37-check-json-companion.ixx  38-do-result-composition.ixx  39-do-multiple-calls.ixx  40-do-in-functions.ixx  (+48 more)
assets/: generate_icons.py
docs/: getting-started.md
examples/: BadArgs.ixx  BadBoolMath.ixx  BadReturn.ixx  BrokeTest.ixx  ContainsTypeTest.ixx  FunctionStressHard.ixx  FunctionStressReal.ixx  files.ixx  (+13 more)
(+371 files in other folders)
