[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ixx"
version = "0.1.0"
description = "The IXX programming language"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1",
]

[project.scripts]
ixx = "ixx.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
